# memento-ai

./: .env.development  .env.test  .gitignore  AGENTS.md  README.md  debug_result.py  forgetful.mycelium.json  main.py  pyproject.toml  pytest.ini  reranker-test.py  ruff.toml  sqlite_vec_poc.py  test_sqlite_init.py
.github/workflows/: build.yml  ci.yml  e2e.yml
alembic/: env.py
alembic/_db_helpers/: db_postgres_impl.py  db_sqlite_impl.py
alembic/versions/: 0c7b964dd1e7_initial_schema_with_entity_many_to_many.py  20251216143413_add_aka_to_entities.py  20260106_add_activity_log_table.py  20260106_add_provenance_tracking_to_memories.py  20260312_add_plans_tasks_criteria_dependencies.py  20260315_add_files_table.py  20260321_add_skills_table.py
app/: _version.py  exceptions.py  main.py
app/config/: auth.py  logging_config.py  settings.py
app/events/: __init__.py  event_bus.py
app/middleware/: auth.py  logging_middleware.py  mcp_auth.py
app/models/: activity_models.py  code_artifact_models.py  document_models.py  entity_models.py  file_models.py  graph_models.py  memory_models.py  models.py  plan_models.py  project_models.py  skill_models.py  tool_registry_models.py  user_models.py
app/repositories/: helpers.py
docker/: .env.example  .env.staging  Dockerfile  docker-compose.deployment.yml  docker-compose.sqlite.yml  docker-compose.yml
docs/: OFFLINE_SETUP.md  api_reference.md  concepts.md  configuration.md  connectivity_guide.md  contributors.md  embedding_migration.md  features_roadmap.md  routes_api.md  search.md  self-hosting-guide.md  tool_reference.md
(+186 files in other folders)
