[project]
name = "forgetful"
version = "0.0.7"
description = "MCP Server for AI Agent Memory Service"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "fastembed>=0.7.3",
    "fastmcp>=2.13.1",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "openai>=2.8.0",
    "pgvector>=0.4.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=0.24.0",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "sqlite-vec>=0.1.6",
    "tiktoken>=0.12.0",
    "uvicorn>=0.35.0",
]
